EXTRA_DIST=$(man_MANS)


man_MANS=\
	attribute_free.3\
	attribute_get_charset.3\
	attribute_get_encoding.3\
	attribute_get_language.3\
	attribute_get_media_type.3\
	attribute_new.3\
	attribute_set_authorization.3\
	attribute_set_charset.3\
	attribute_set_encoding.3\
	attribute_set_language.3\
	attribute_set_media_type.3\
	cookie_get_comment.3\
	cookie_get_domain.3\
	cookie_get_max_age.3\
	cookie_get_name.3\
	cookie_get_path.3\
	cookie_get_secure.3\
	cookie_get_value.3\
	cookie_get_version.3\
	cookie_new.3\
	cookie_set_comment.3\
	cookie_set_domain.3\
	cookie_set_max_age.3\
	cookie_set_name.3\
	cookie_set_path.3\
	cookie_set_secure.3\
	cookie_set_value.3\
	cookie_set_version.3\
	get_basename.3\
	get_mime_type.3\
	highlander_attributes.3\
	highlander_cookies.3\
	highlander.3\
	http_server_add_page.3\
	http_server_alloc.3\
	http_server_configure.3\
	http_server_free_root_resources.3\
	http_server_get_block_when_full.3\
	http_server_get_document_root.3\
	http_server_get_queue_size.3\
	http_server_get_root_resources.3\
	http_server_get_timeout_accept.3\
	http_server_get_timeout_read.3\
	http_server_get_timeout_write.3\
	http_server_new.3\
	http_server_set_block_when_full.3\
	http_server_set_can_read_files.3\
	http_server_set_default_page_attributes.3\
	http_server_set_default_page_handler.3\
	http_server_set_documentroot.3\
	http_server_set_host.3\
	http_server_set_logfile.3\
	http_server_set_logrotate.3\
	http_server_set_max_pages.3\
	http_server_set_port.3\
	http_server_set_post_limit.3\
	http_server_set_queue_size.3\
	http_server_set_retries_read.3\
	http_server_set_retries_write.3\
	http_server_set_timeout_accept.3\
	http_server_set_timeout_read.3\
	http_server_set_timeout_write.3\
	http_server_set_worker_threads.3\
	http_server_shutdown.3\
	http_server_shutting_down.3\
	http_server_start.3\
	http_server_start_via_process.3\
	request_accepts_language.3\
	request_accepts_media_type.3\
	request_content_type_is.3\
	request_get_content_length.3\
	request_get_content.3\
	request_get_content_type.3\
	request_get_cookie_count.3\
	request_get_cookie.3\
	request_get_field_count.3\
	request_get_host.3\
	request_get_method.3\
	request_get_parameter_count.3\
	request_get_parameter_name.3\
	request_get_parameter_value.3\
	request_get_referer.3\
	request_get_uri.3\
	request_get_user_agent.3\
	request_get_version.3\
	response_add.3\
	response_printf.3\
	response_send_file.3\
	response_set_accept_ranges.3\
	response_set_age.3\
	response_set_allow.3\
	response_set_cache_control.3\
	response_set_connection.3\
	response_set_content_buffer.3\
	response_set_content_encoding.3\
	response_set_content_language.3\
	response_set_cookie.3\
	response_set_date.3\
	response_set_etag.3\
	response_set_expires.3\
	response_set_last_modified.3\
	response_set_location.3\
	response_set_pragma.3\
	response_set_proxy_authenticate.3\
	response_set_retry_after.3\
	response_set_server.3\
	response_set_trailer.3\
	response_set_transfer_encoding.3\
	response_set_upgrade.3\
	response_set_vary.3\
	response_set_via.3\
	response_set_warning.3\
	response_set_www_authenticate.3\
	td2p.3\
	hipp.1\
	\
	cstring.3\
	cstring_charcat.3\
	cstring_concat.3\
	cstring_set.3\
	cstring_extend.3\
	cstring_left.3\
	cstring_length.3\
	cstring_lower.3\
	cstring_new.3\
	cstring_pcat.3\
	cstring_printf.3\
	cstring_recycle.3\
	cstring_reverse.3\
	cstring_right.3\
	cstring_strip.3\
	cstring_split.3\
	cstring_substring.3\
	cstring_upper.3\
	cstring_vprintf.3\
	\
	list_add.3\
	list_copy.3\
	list_count.3\
	list_delete.3\
	list_end.3\
	list_find.3\
	list_first.3\
	list_foreach.3\
	list_get.3\
	list_get_item.3\
	list_insert.3\
	list_last.3\
	list_merge.3\
	list_new.3\
	list_next.3\
	list_remove_node.3\
	list_size.3\
	list_sort.3\
	sublist_adaptor.3\
	sublist_copy.3\
	sublist_create.3\
	sublist_free.3\
	\
	meta_process.3\
	process_add_object_to_start.3\
	process_free.3\
	process_get_exitcode.3\
	process_new.3\
	process_set_rootdir.3\
	process_set_username.3\
	process_shutting_down.3\
	process_start.3\
	process_wait_for_shutdown.3\
	\
	meta_pool.3\
	pool_new.3\
	pool_free.3\
	pool_add.3\
	pool_get.3\
	pool_recycle.3\
	\
	meta_array.3\
	array_new.3\
	array_free.3\
	array_nelem.3\
	array_extend.3\
	array_get.3\
	array_add.3\
	\
	meta_bitset.3\
	bitset_new.3\
	bitset_free.3\
	bitset_clear.3\
	bitset_clear_all.3\
	bitset_data.3\
	bitset_is_set.3\
	bitset_map.3\
	bitset_remap.3\
	bitset_set.3\
	bitset_set_all.3\
	bitset_size.3\
	bitset_unmap.3\
	\
	meta_cache.3\
	cache_add.3\
	cache_exists.3\
	cache_free.3\
	cache_get.3\
	cache_new.3\
	cache_remove.3\
	\
	meta_configfile.3\
	configfile_exists.3\
	configfile_free.3\
	configfile_get_int.3\
	configfile_get_long.3\
	configfile_get_string.3\
	configfile_get_uint.3\
	configfile_get_ulong.3\
	configfile_read.3\
	connection.3\
	connection_arg2.3\
	connection_assign_read_buffer.3\
	connection_close.3\
	connection_discard.3\
	connection_flush.3\
	connection_free.3\
	connection_get_addr.3\
	connection_get_fd.3\
	connection_getc.3\
	connection_gets.3\
	connection_new.3\
	connection_putc.3\
	connection_read.3\
	connection_readbuf_size.3\
	connection_recycle.3\
	connection_set_fd.3\
	connection_set_params.3\
	connection_set_persistent.3\
	connection_ungetc.3\
	connection_write.3\
	connection_write_big_buffer.3\
	connection_writebuf_size.3\
	tcp_server.3\
	tcp_server_allow_clients.3\
	tcp_server_clear_client_filter.3\
	tcp_server_free_root_resources.3\
	tcp_server_get_root_resources.3\
	tcp_server_init.3\
	tcp_server_new.3\
	tcp_server_set_block_when_full.3\
	tcp_server_set_hostname.3\
	tcp_server_set_port.3\
	tcp_server_set_queue_size.3\
	tcp_server_set_readbuf_size.3\
	tcp_server_set_retries.3\
	tcp_server_set_service_function.3\
	tcp_server_set_timeout.3\
	tcp_server_set_worker_threads.3\
	tcp_server_set_writebuf_size.3\
	tcp_server_shutdown.3\
	tcp_server_shutting_down.3\
	tcp_server_start.3\
	tcp_server_start_via_process.3\
	\
	threadpool.3\
	\
	filecache.3\
	filecache_new.3\
	\
	meta_socket.3\
	sock_accept.3\
	sock_bind.3\
	sock_clear_nonblock.3\
	sock_close.3\
	sock_listen.3\
	sock_read.3\
	sock_set_nonblock.3\
	sock_socket.3\
	sock_write.3\
	wait_for_data.3\
	wait_for_writability.3\
	create_client_socket.3\
	create_server_socket.3

