# Auto-converted from Makefile.am (best-effort)

bin2c_exe = executable('bin2c', ['bin2c.c'],
  install: true,
  include_directories: global_includes,
  c_args: global_c_args,
  link_args: global_link_args
)

hipp_exe = executable('hipp', ['hipp.c'],
  install: true,
  include_directories: global_includes,
  c_args: global_c_args,
  link_args: global_link_args
)
